[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/hud/bank.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Arcadepix Plus.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/images/buttons/empty.png" type="Texture" id=3]
[ext_resource path="res://assets/images/misc/coin_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/images/icons/rewarded_ad_icon.png" type="Texture" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.109804, 0.109804, 0.109804, 0.435294 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 65
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 65
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[node name="Bank" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Darkening" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 18.0
margin_top = 381.0
margin_right = 382.0
margin_bottom = 619.0
grow_horizontal = 2
mouse_filter = 2
custom_constants/separation = 20
alignment = 1

[node name="BankLine_Ads" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 364.0
margin_bottom = 84.0
alignment = 2

[node name="Coins" type="HBoxContainer" parent="CenterContainer/VBoxContainer/BankLine_Ads"]
margin_left = 35.0
margin_right = 100.0
margin_bottom = 84.0

[node name="CoinsCount" type="Label" parent="CenterContainer/VBoxContainer/BankLine_Ads/Coins"]
margin_top = 17.0
margin_right = 65.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 3 )
text = "10"

[node name="Button" type="HBoxContainer" parent="CenterContainer/VBoxContainer/BankLine_Ads"]
margin_left = 104.0
margin_right = 364.0
margin_bottom = 84.0
custom_constants/separation = 30
alignment = 2

[node name="CoinIcon" type="TextureRect" parent="CenterContainer/VBoxContainer/BankLine_Ads/Button"]
margin_right = 50.0
margin_bottom = 84.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="BankButton_Ads" type="TextureButton" parent="CenterContainer/VBoxContainer/BankLine_Ads/Button"]
margin_left = 80.0
margin_right = 260.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 92.7563, 41.1183 )
texture_normal = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/BankLine_Ads/Button/BankButton_Ads"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/BankLine_Ads/Button/BankButton_Ads/CenterContainer"]
margin_left = 51.0
margin_top = 17.0
margin_right = 129.0
margin_bottom = 67.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 4

[node name="BankLine_1" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 364.0
margin_bottom = 188.0
alignment = 2

[node name="Coins" type="HBoxContainer" parent="CenterContainer/VBoxContainer/BankLine_1"]
margin_right = 100.0
margin_bottom = 84.0

[node name="CoinsCount" type="Label" parent="CenterContainer/VBoxContainer/BankLine_1/Coins"]
margin_top = 17.0
margin_right = 100.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 3 )
text = "100"

[node name="Button" type="HBoxContainer" parent="CenterContainer/VBoxContainer/BankLine_1"]
margin_left = 104.0
margin_right = 364.0
margin_bottom = 84.0
custom_constants/separation = 30
alignment = 2

[node name="CoinIcon" type="TextureRect" parent="CenterContainer/VBoxContainer/BankLine_1/Button"]
margin_right = 50.0
margin_bottom = 84.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="BankButton_1" type="TextureButton" parent="CenterContainer/VBoxContainer/BankLine_1/Button"]
margin_left = 80.0
margin_right = 260.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 92.7563, 41.1183 )
texture_normal = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/BankLine_1/Button/BankButton_1"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="CenterContainer/VBoxContainer/BankLine_1/Button/BankButton_1/CenterContainer"]
margin_left = 12.0
margin_top = 17.0
margin_right = 168.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.654902, 0.282353, 1 )
text = "75,00"
align = 1
valign = 1

[node name="BankText" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 364.0
margin_bottom = 238.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "BANK"
align = 1
valign = 1
autowrap = true
uppercase = true
[connection signal="close" from="." to="." method="_on_Bank_close"]
[connection signal="gui_input" from="Darkening" to="." method="_on_Darkening_gui_input"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/BankLine_Ads/Button/BankButton_Ads" to="." method="_on_BankButton_Ads_button_down"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/BankLine_Ads/Button/BankButton_Ads" to="." method="_on_BankButton_Ads_button_up"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BankLine_Ads/Button/BankButton_Ads" to="." method="_on_BankButton_Ads_pressed"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/BankLine_1/Button/BankButton_1" to="." method="_on_BankButton_1_button_down"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/BankLine_1/Button/BankButton_1" to="." method="_on_BankButton_1_button_up"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BankLine_1/Button/BankButton_1" to="." method="_on_BankButton_1_pressed"]
